internal/fixtures/architecture/negative/environment-read/packages/domain/src/bad.ts
export const mode = process.env.DEEP_WORK_MODE;
